samples/_failures_safe/1761340016_d726d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afc6007e.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_afc6007e.c:189:5: error: expected declaration or statement at end of input
  189 |     }
      |     ^
